--- a/index.html
+++ b/index.html
@@ -134,7 +134,72 @@
           </div>
          </section>
          <!-- optional section -->
-         
+         <section class="container mx-auto my-24">
+          <div class="grid grid-cols-1 lg:grid-cols-4 bg-white p-8 rounded-2xl gap-6">
+            <!-- card 1 -->
+             <div class="text-center space-y-3">
+              <i class="fa-regular fa-message text-4xl"></i>
+              <h3 class="text-4xl font-bold">255+</h3>
+              <p>Happy Client Review</p>
+             </div>
+            <!-- card 2 -->
+             <div class="text-center space-y-3">
+              <i class="fa-solid fa-users-line text-4xl"></i>
+              <h3 class="text-4xl font-bold">30k+</h3>
+              <p>Work Departments</p>
+             </div>
+            <!-- card 3 -->
+             <div class="text-center space-y-3">
+              <i class="fa-solid fa-user-group text-4xl"></i>
+              <h3 class="text-4xl font-bold">307+</h3>
+              <p>Staff Members</p>
+             </div>
+            <!-- card 3 -->
+             <div class="text-center space-y-3">
+              <i class="fa-solid fa-house text-4xl"></i>
+              <h3 class="text-4xl font-bold">50+</h3>
+              <p>Work Departments</p>
+             </div>
+          </div>
+        </section>
+        <!-- How we works section -->
+         <section class="container mx-auto my-24">
+          <div class="text-center mb-8">
+            <button class="btn bg-white rounded-full text-2xl"><i class="fa-solid fa-arrow-right mr-2"></i>How we works</button>
+          </div>
+          <!-- section title -->
+           <div class="text-center">
+            <h3 class="font-bold text-4xl">Our Works Process</h3>
+            <p class="text-gray-700 font-medium w-3/5 mx-auto mt-6 mb-8">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+           </div>
+           <!-- card section -->
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
+              <!-- card 1 -->
+               <div class="p-6 rounded-2xl space-y-3 bg-[#E7C1D3]">
+                <img src="./assets/concept.png" alt="">
+                <h3 class="font-semibold text-xl">Concept</h3>
+                <p class="text-gray-600">The barn house captivates with its blend of rustic charm and modern.</p>
+               </div>
+              <!-- card 2 -->
+               <div class="p-6 rounded-2xl space-y-3 bg-[#EFDA6E]">
+                <img src="./assets/flow-chart.png" alt="">
+                <h3 class="font-semibold text-xl">Design Process</h3>
+                <p class="text-gray-600">The barn house captivates with its blend of rustic charm and modern.</p>
+               </div>
+              <!-- card 3 -->
+               <div class="p-6 rounded-2xl space-y-3 bg-[#A4DAC3]">
+                <img src="./assets/vision.png" alt="">
+                <h3 class="font-semibold text-xl">Supervision</h3>
+                <p class="text-gray-600">The barn house captivates with its blend of rustic charm and modern.</p>
+               </div>
+              <!-- card 4 -->
+               <div class="p-6 rounded-2xl space-y-3 bg-[#77AAEA]">
+                <img src="./assets/budget-planning.png" alt="">
+                <h3 class="font-semibold text-xl">Budget Planning</h3>
+                <p class="text-gray-600">The barn house captivates with its blend of rustic charm and modern.</p>
+               </div>
+            </div>
+         </section>
       </main>
    </main>
 </body>
