--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       </div>
     </div> 
      </header>
-     <!-- main section -->
+     <!-- main section 1 -->
       <main class="bg-sect">
         <!-- about us section -->
          <section class="container mx-auto">
@@ -173,7 +173,7 @@
             <p class="text-gray-700 font-medium w-3/5 mx-auto mt-6 mb-8">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
            </div>
            <!-- card section -->
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 pb-20">
               <!-- card 1 -->
                <div class="p-6 rounded-2xl space-y-3 bg-[#E7C1D3]">
                 <img src="./assets/concept.png" alt="">
@@ -201,6 +201,54 @@
             </div>
          </section>
       </main>
+      <!-- main section 2 -->
+      <main>
+        <section class="container mx-auto my-24">
+          <!-- Our Latest Portfolio section -->
+        <div class="text-center mb-8">
+          <button class="btn bg-[#ABEF5F33] rounded-full text-2xl"><i class="fa-solid fa-arrow-right mr-2"></i>Explore our Latest works</button>
+        </div>
+        <!-- section title -->
+         <div class="text-center">
+          <h3 class="font-bold text-4xl">Our Latest Portfolio</h3>
+          <p class="text-gray-700 font-medium w-3/5 mx-auto mt-6 mb-8"> The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+         </div>
+         <!-- grid grid grid -->
+          <div class="grid grid-cols-1 lg:grid-cols-12 md:grid-cols-2 gap-6">
+            <!-- card-1 -->
+             <div class="flex flex-col md:flex-row md:col-span-2 gap-6 lg:col-span-9 p-6 border rounded-2xl drop-shadow-md">
+              <img src="./assets/img1.png" alt="">
+              <div class="">
+                <h3 class="font-bold text-2xl">Commercial</h3>
+                <p class="text-gray-500 my-6 md:w-3/5">The barn house captivates with its blend of rustic charm and modern. The barn house captivates with its blend of rustic charm and modern .</p>
+                <a class="font-bold text-xl">View Details<i class="fa-solid fa-arrow-right -rotate-45 rounded-full bg-[#ABEF5F] text-black p-2 ml-2"></i></a>
+              </div>
+            </div>
+              <!-- card 2 -->
+               <div class="p-6 border rounded-2xl drop-shadow-md lg:col-span-3">
+                <img class="w-full h-full"  src="./assets/img2.png" alt="">
+               </div>            
+              <!-- card 3 -->
+               <div class="p-6 border rounded-2xl drop-shadow-md lg:col-span-2">
+                <img class="w-full h-full" src="./assets/img3.png" alt="">
+               </div> 
+                <!-- card-4 -->
+             <div class="flex flex-col md:flex-row gap-6 lg:col-span-8 p-6 border rounded-2xl drop-shadow-md md:col-span-2">
+              <img src="./assets/img4.png" alt="">
+              <div class="">
+                <h3 class="font-bold text-2xl">Commercial</h3>
+                <p class="text-gray-500 my-6 md:w-3/4">The barn house captivates with its blend of rustic charm and modern. The barn house captivates with its blend of rustic charm and modern .</p>
+                <a class="font-bold text-xl">View Details<i class="fa-solid fa-arrow-right -rotate-45 rounded-full bg-[#ABEF5F] text-black p-2 ml-2"></i></a>
+              </div>
+            </div> 
+            <!-- card 5 -->
+            <div class="p-6 border rounded-2xl drop-shadow-md lg:col-span-2">
+              <img class="w-full h-full" src="./assets/img5.png" alt="">
+             </div>           
+          </div>
+        </section>
+      </main>
+      
    </main>
 </body>
 </html>
