Rinterio News section finish

--- a/index.html
+++ b/index.html
@@ -201,8 +201,6 @@
             </div>
          </section>
       </main>
-      <!-- main section 2 -->
-      <main>
         <section class="container mx-auto my-24">
           <!-- Our Latest Portfolio section -->
         <div class="text-center mb-8">
@@ -247,8 +245,98 @@
              </div>           
           </div>
         </section>
-      </main>
-      
+              <!-- main section 2 -->
+        <main class="bg-sect">
+          <section class="container mx-auto my-24 py-20">
+            <!-- Rinterio News section -->
+        <div class="text-center mb-8">
+          <button class="btn bg-[#ABEF5F33] rounded-full text-2xl"><i class="fa-solid fa-arrow-right mr-2"></i>Rinterio News</button>
+        </div>
+        <!-- section title -->
+         <div class="text-center">
+          <h3 class="font-bold text-4xl">Read Our Articles and News</h3>
+          <p class="text-gray-700 font-medium w-3/5 mx-auto mt-6 mb-8">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+         </div> 
+         <!-- card section -->
+          <div class="grid grid-cols-1 md:grid-cols-3">
+            <!-- card 1 -->
+            <div class="card bg-base-100 w-96 shadow-xl pt-6">
+              <figure>
+                <img
+                  src="./assets/article1.png"
+                  alt="" />
+              </figure>
+              <div class="flex items-center mt-4 pl-6">
+                <div class="mr-3">
+                  <i class="fa-solid fa-calendar-days"></i>
+                  <p class="inline-block">July14, 2024</p>
+                </div>
+                <div>
+                  <i class="fa-solid fa-user-tie"></i>
+                  <p class="inline-block">By Admin</p>
+                </div>
+              </div>
+              <div class="card-body">
+                <h2 class="card-title">How to choose the furniture right  of your home.</h2>
+                <p>The barn house captivates with its blend of rustic charm and modern. </p>
+                <div class="card-actions">
+                  <button class="font-bold text-xl">Read More<i class="fa-solid fa-arrow-right -rotate-45 rounded-full bg-[#ABEF5F] text-black p-2 ml-2"></i></button>
+                </div>
+              </div>
+            </div>
+            <!-- card 2 -->
+            <div class="card bg-base-100 w-96 shadow-xl pt-6">
+              <figure>
+                <img
+                  src="./assets/article2.png"
+                  alt="" />
+              </figure>
+              <div class="flex items-center mt-4 pl-6">
+                <div class="mr-3">
+                  <i class="fa-solid fa-calendar-days"></i>
+                  <p class="inline-block">July14, 2024</p>
+                </div>
+                <div>
+                  <i class="fa-solid fa-user-tie"></i>
+                  <p class="inline-block">By Admin</p>
+                </div>
+              </div>
+              <div class="card-body">
+                <h2 class="card-title">How to choose the furniture right  of your home.</h2>
+                <p>The barn house captivates with its blend of rustic charm and modern. </p>
+                <div class="card-actions">
+                  <button class="font-bold text-xl">Read More<i class="fa-solid fa-arrow-right -rotate-45 rounded-full bg-[#ABEF5F] text-black p-2 ml-2"></i></button>
+                </div>
+              </div>
+            </div>
+            <!-- card 3 -->
+            <div class="card bg-base-100 w-96 shadow-xl pt-6">
+              <figure>
+                <img
+                  src="./assets/article3.png"
+                  alt="" />
+              </figure>
+              <div class="flex items-center mt-4 pl-6">
+                <div class="mr-3">
+                  <i class="fa-solid fa-calendar-days"></i>
+                  <p class="inline-block">July14, 2024</p>
+                </div>
+                <div>
+                  <i class="fa-solid fa-user-tie"></i>
+                  <p class="inline-block">By Admin</p>
+                </div>
+              </div>
+              <div class="card-body">
+                <h2 class="card-title">How to choose the furniture right  of your home.</h2>
+                <p>The barn house captivates with its blend of rustic charm and modern. </p>
+                <div class="card-actions">
+                  <button class="font-bold text-xl">Read More<i class="fa-solid fa-arrow-right -rotate-45 rounded-full bg-[#ABEF5F] text-black p-2 ml-2"></i></button>
+                </div>
+              </div>
+            </div>
+          </div>
+          </section>
+        </main>
    </main>
 </body>
 </html>
