--- a/index.html
+++ b/index.html
@@ -337,6 +337,30 @@
           </div>
           </section>
         </main>
+        <!-- Let’s Connect section -->
+        <div
+        class="min-h-screen bg-no-repeat bg-cover"
+        style="background-image: url(./assets/bg.jpg);">      
+        <section class="container mx-auto my-24 py-20">
+          <div class="text-center mb-8">
+            <button class="btn bg-[#ABEF5F33] rounded-full text-2xl"><i class="fa-solid fa-arrow-right mr-2"></i>Let’s Connect</button>
+          </div>
+          <!-- section title -->
+           <div class="text-center">
+            <h3 class="font-bold text-4xl">Let’s Discuss Next Project</h3>
+            <p class="text-gray-700 font-medium w-3/5 mx-auto mt-6 mb-8">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+           </div> 
+           <!-- form section -->
+            <form class="grid grid-cols-1 md:grid-cols-2 md:grid-rows-5 gap-8">
+              <input type="text" placeholder="First Name" class="input w-full max-w-3xl" />
+              <input type="text" placeholder="Last Name" class="input w-full max-w-3xl" />
+              <input type="text" placeholder="Phone Number" class="input w-full max-w-3xl" />
+              <input type="text" placeholder="Your Email" class="input w-full max-w-3xl" />
+              <textarea class="textarea md:col-span-2 row-span-3" placeholder="Write your message here"></textarea>
+            </form>
+            <button class="w-full btn bg-[#ABEF5F] font-bold rounded-full mt-8">Send Mail  <i class="fa-solid fa-arrow-right -rotate-45 rounded-full bg-black text-white p-2 text-md"></i></button>
+        </section>
+      </div>
    </main>
 </body>
 </html>
