--- a/index.html
+++ b/index.html
@@ -83,12 +83,12 @@
           </div>
     </nav>
     <!-- hero section -->
-    <div class="">
+    <div class="px-5 md:px-0">
       <div class="hero min-h-screen">
         <div class="hero-content text-center">
           <div class="space-y-3">
             <img class="mx-auto" src="./assets/banner.png" alt="">
-            <h1 class="text-6xl font-bold">A barn house of this design has a striking appearance</h1>
+            <h1 class="text-3xl md:text-6xl  font-bold">A barn house of this design has a striking appearance</h1>
             <p class="py-6 w-11/12">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents, and large windows that flood the space with natural light.</p>
             <button class="bg-[#ABEF5F80] rounded-full font-bold text-xl py-2 px-5 ">View Details<i class="fa-solid fa-arrow-right -rotate-45 rounded-full bg-[#ABEF5F] text-black p-2 ml-2"></i></button>
           </div>
@@ -99,31 +99,35 @@
      <!-- main section 1 -->
       <main class="bg-sect">
         <!-- about us section -->
-         <section class="container mx-auto">
-          <div class="pt-12">
+         <section class="container mx-auto px-6 md:px-0">
+          <div class="pt-12 hidden md:block">
             <img src="./assets/Vector.png" alt="">
           </div>
           <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
             <!-- text container  -->
-            <div class="space-y-8">
+            <div class="space-y-8 pt-8 md:pt-0 text-center md:text-left">
               <button class=" bg-white rounded-full py-2 px-4 font-bold"><i class="fa-solid fa-arrow-right mr-2"></i>About Us</button>
-              <h3 class="text-4xl font-bold w-3/4">We design thoughtful, liveable spaces</h3>
+              <h3 class="md:text-4xl text-2xl font-bold md:w-3/4">We design thoughtful, liveable spaces</h3>
               <p>The barn house captivates with its blend of rustic charm and 
                 modern sophistication, featuring weathered wood, sleek metal accents.</p>
                 <!-- card-1 -->
                  <div class="flex p-6 gap-3 rounded-xl drop-shadow-md bg-white">
-                  <img src="./assets/commercial.png" alt="">
+                  <div>
+                    <img  src="./assets/commercial.png" alt="">
+                  </div>
                   <div class="flex-1">
                     <h3 class="text-xl font-bold">Commercial</h3>
-                    <p class="text-gray-500 w-3/4">The barn house captivates with its blend of rustic charm and modern.</p>
+                    <p class="text-gray-500 md:w-3/4">The barn house captivates with its blend of rustic charm and modern.</p>
                   </div>
                 </div>
                 <!-- card-2 -->
                  <div class="flex p-6 gap-3 rounded-xl drop-shadow-md bg-white">
+                <div>
                   <img src="./assets/residential.png" alt="">
+                </div>
                   <div class="flex-1">
                     <h3 class="text-xl font-bold">Residential</h3>
-                    <p class="text-gray-500 w-3/4">The barn house captivates with its blend of rustic charm and modern.</p>
+                    <p class="text-gray-500 md:w-3/4">The barn house captivates with its blend of rustic charm and modern.</p>
                   </div>
                 </div>
             </div>
@@ -134,7 +138,7 @@
           </div>
          </section>
          <!-- optional section -->
-         <section class="container mx-auto my-24">
+         <section class="container mx-auto my-24 px-6 md:px-0">
           <div class="grid grid-cols-1 lg:grid-cols-4 bg-white p-8 rounded-2xl gap-6">
             <!-- card 1 -->
              <div class="text-center space-y-3">
@@ -163,14 +167,14 @@
           </div>
         </section>
         <!-- How we works section -->
-         <section class="container mx-auto my-24">
+         <section class="container mx-auto my-24 px-6 md:px-0">
           <div class="text-center mb-8">
             <button class="btn bg-white rounded-full text-2xl"><i class="fa-solid fa-arrow-right mr-2"></i>How we works</button>
           </div>
           <!-- section title -->
            <div class="text-center">
             <h3 class="font-bold text-4xl">Our Works Process</h3>
-            <p class="text-gray-700 font-medium w-3/5 mx-auto mt-6 mb-8">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+            <p class="text-gray-700 font-medium md:w-3/5 mx-auto mt-6 mb-8">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
            </div>
            <!-- card section -->
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 pb-20">
@@ -201,15 +205,15 @@
             </div>
          </section>
       </main>
-        <section class="container mx-auto my-24">
+        <section class="container mx-auto my-24 px-6 md:px-0">
           <!-- Our Latest Portfolio section -->
         <div class="text-center mb-8">
-          <button class="btn bg-[#ABEF5F33] rounded-full text-2xl"><i class="fa-solid fa-arrow-right mr-2"></i>Explore our Latest works</button>
+          <button class="btn bg-[#ABEF5F33] rounded-full md:text-2xl"><i class="fa-solid fa-arrow-right mr-2"></i>Explore our Latest works</button>
         </div>
         <!-- section title -->
          <div class="text-center">
-          <h3 class="font-bold text-4xl">Our Latest Portfolio</h3>
-          <p class="text-gray-700 font-medium w-3/5 mx-auto mt-6 mb-8"> The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+          <h3 class="font-bold text-2xl md:text-4xl">Our Latest Portfolio</h3>
+          <p class="text-gray-700 font-medium md:w-3/5 mx-auto mt-6 mb-8"> The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
          </div>
          <!-- grid grid grid -->
           <div class="grid grid-cols-1 lg:grid-cols-12 md:grid-cols-2 gap-6">
@@ -224,7 +228,7 @@
             </div>
               <!-- card 2 -->
                <div class="p-6 border rounded-2xl drop-shadow-md lg:col-span-3">
-                <img class="w-full h-full"  src="./assets/img2.png" alt="">
+                <img  class="w-full h-full" src="./assets/img2.png" alt="">
                </div>            
               <!-- card 3 -->
                <div class="p-6 border rounded-2xl drop-shadow-md lg:col-span-2">
@@ -242,25 +246,29 @@
             <!-- card 5 -->
             <div class="p-6 border rounded-2xl drop-shadow-md lg:col-span-2">
               <img class="w-full h-full" src="./assets/img5.png" alt="">
-             </div>           
+             </div>   
+             <!-- card 3 -->
+             <div class="p-6 border rounded-2xl drop-shadow-md lg:hidden">
+              <img class="w-full h-full" src="./assets/img3.png" alt="">
+             </div>         
           </div>
         </section>
               <!-- main section 2 -->
         <main class="bg-sect">
-          <section class="container mx-auto my-24 py-20">
+          <section class="container mx-auto my-24 py-20 px-6 md:px-0">
             <!-- Rinterio News section -->
         <div class="text-center mb-8">
           <button class="btn bg-[#ABEF5F33] rounded-full text-2xl"><i class="fa-solid fa-arrow-right mr-2"></i>Rinterio News</button>
         </div>
         <!-- section title -->
          <div class="text-center">
-          <h3 class="font-bold text-4xl">Read Our Articles and News</h3>
-          <p class="text-gray-700 font-medium w-3/5 mx-auto mt-6 mb-8">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+          <h3 class="font-bold text-2xl md:text-4xl">Read Our Articles and News</h3>
+          <p class="text-gray-700 font-medium md:w-3/5 mx-auto mt-6 mb-8">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
          </div> 
          <!-- card section -->
-          <div class="grid grid-cols-1 md:grid-cols-3">
+          <div class="grid grid-cols-1 md:grid-cols-3 gap-5">
             <!-- card 1 -->
-            <div class="card bg-base-100 w-96 shadow-xl pt-6">
+            <div class="card bg-base-100 shadow-xl md:pt-6">
               <figure>
                 <img
                   src="./assets/article1.png"
@@ -285,7 +293,7 @@
               </div>
             </div>
             <!-- card 2 -->
-            <div class="card bg-base-100 w-96 shadow-xl pt-6">
+            <div class="card bg-base-100 shadow-xl md:pt-6">
               <figure>
                 <img
                   src="./assets/article2.png"
@@ -310,7 +318,7 @@
               </div>
             </div>
             <!-- card 3 -->
-            <div class="card bg-base-100 w-96 shadow-xl pt-6">
+            <div class="card bg-base-100 shadow-xl md:pt-6">
               <figure>
                 <img
                   src="./assets/article3.png"
@@ -341,14 +349,14 @@
         <div
         class="min-h-screen bg-no-repeat bg-cover"
         style="background-image: url(./assets/bg.jpg);">      
-        <section class="container mx-auto my-24 py-20">
+        <section class="container mx-auto my-24 py-20 px-6 md:px-0">
           <div class="text-center mb-8">
             <button class="btn bg-[#ABEF5F33] rounded-full text-2xl"><i class="fa-solid fa-arrow-right mr-2"></i>Let’s Connect</button>
           </div>
           <!-- section title -->
            <div class="text-center">
-            <h3 class="font-bold text-4xl">Let’s Discuss Next Project</h3>
-            <p class="text-gray-700 font-medium w-3/5 mx-auto mt-6 mb-8">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+            <h3 class="font-bold text-2xl md:text-4xl">Let’s Discuss Next Project</h3>
+            <p class="text-gray-700 font-medium md:w-3/5 mx-auto mt-6 mb-8">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
            </div> 
            <!-- form section -->
             <form class="grid grid-cols-1 md:grid-cols-2 md:grid-rows-5 gap-8">
@@ -362,5 +370,29 @@
         </section>
       </div>
    </main>
+   <!-- footer section -->
+   <footer class="bg-black text-white">
+    <section class="container mx-auto mt-24 py-20 px-6 md:px-0">
+      <!-- footer title -->
+      <div class="text-center">
+        <h3 class="font-bold text-4xl"><i class="fa-solid fa-arrow-right -rotate-45 rounded-full bg-[#ABEF5F] text-black p-2 mr-3"></i>Rinterio</h3>
+        <p class="md:w-3/5 mx-auto my-6">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+      </div>
+      <!-- footer flex item -->
+       <div>
+        <ul class="flex flex-col md:flex-row gap-4 justify-center items-center">
+          <li><a>Home</a></li>
+          <li><a>Services</a></li>
+          <li><a>Portfolio</a></li>
+          <li><a>Blogs</a></li>
+          <li><a>Contact Us</a></li>
+        </ul>
+       </div>
+       <!-- footer button  -->
+       <div class="text-center mt-6">
+        <button><a class="bg-[#ABEF5F] rounded-full font-bold  py-2 px-3 text-black">Book Consult <i class="fa-solid fa-arrow-right -rotate-45 rounded-full bg-black text-white p-2 text-md"></i></a></button>
+       </div>
+    </section>
+   </footer>
 </body>
 </html>
