--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
          <!-- card section -->
           <div class="grid grid-cols-1 md:grid-cols-3 gap-5">
             <!-- card 1 -->
-            <div class="card bg-base-100 shadow-xl md:pt-6">
+            <div class="card bg-base-100 shadow-xl lg:pt-6">
               <figure>
                 <img
                   src="./assets/article1.png"
@@ -293,7 +293,7 @@
               </div>
             </div>
             <!-- card 2 -->
-            <div class="card bg-base-100 shadow-xl md:pt-6">
+            <div class="card bg-base-100 shadow-xl lg:pt-6">
               <figure>
                 <img
                   src="./assets/article2.png"
@@ -318,7 +318,7 @@
               </div>
             </div>
             <!-- card 3 -->
-            <div class="card bg-base-100 shadow-xl md:pt-6">
+            <div class="card bg-base-100 shadow-xl lg:pt-6">
               <figure>
                 <img
                   src="./assets/article3.png"
