--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
          </section>
          <!-- optional section -->
          <section class="container mx-auto my-24 px-6 md:px-0">
-          <div class="grid grid-cols-1 lg:grid-cols-4 bg-white p-8 rounded-2xl gap-6">
+          <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 bg-white p-8 rounded-2xl gap-6">
             <!-- card 1 -->
              <div class="text-center space-y-3">
               <i class="fa-regular fa-message text-4xl"></i>
