--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
         </section>
               <!-- main section 2 -->
         <main class="bg-sect">
-          <section class="container mx-auto my-24 py-20 px-6 md:px-0">
+          <section class="container mx-auto mt-24 py-20 px-6 md:px-0">
             <!-- Rinterio News section -->
         <div class="text-center mb-8">
           <button class="btn bg-[#ABEF5F33] rounded-full text-2xl"><i class="fa-solid fa-arrow-right mr-2"></i>Rinterio News</button>
@@ -344,6 +344,117 @@
             </div>
           </div>
           </section>
+          <!-- extra section -->
+        <section class="container mx-auto py-24 px-6 md:px-0">
+            <!-- Rinterio News section -->
+            <div class="text-center mb-8">
+              <button class="btn bg-[#ABEF5F33] rounded-full text-2xl"><i class="fa-solid fa-arrow-right mr-2"></i>Apartment</button>
+            </div>
+            <!-- section title -->
+            <div class="text-center">
+                <h3 class="font-bold text-2xl md:text-4xl">Featured Property</h3>
+              <p class="text-gray-700 font-medium md:w-3/5 mx-auto mt-6 mb-8">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+            </div>
+            <!-- card section -->
+             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+              <!-- card 1 -->
+              <div class="card bg-base-100 shadow-xl">
+                <figure>
+                  <img class="w-full"
+                    src="./assets/pic1.png"
+                    />
+                </figure>
+                <div class="card-body">
+                  <h2 class="card-title text-2xl">The Residences at Dhaka City </h2>
+                  <p><i class="fa-solid fa-location-dot mr-2"></i> Road No.10 , Mirpur ,Dhaka</p>
+                  <p><i class="fa-solid fa-bed"></i> 2 Beds <i class="fa-solid fa-bath ml-2"></i> 1 Bath <i class="fa-solid fa-car ml-2"></i> 1 Parking</p>
+                  <div class="card-actions">
+                    <button class="font-bold text-xl hover:border-b-2 border-black">Explore More</button><i class="fa-solid fa-arrow-right -rotate-45 rounded-full bg-[#ABEF5F] text-black p-2"></i>
+                  </div>
+              </div>
+            </div>
+              <!-- card 2 -->
+              <div class="card bg-base-100 shadow-xl">
+                <figure>
+                  <img class="w-full"
+                    src="./assets/pic2.png"
+                    />
+                </figure>
+                <div class="card-body">
+                  <h2 class="card-title text-2xl">The Residences at Dhaka City </h2>
+                  <p><i class="fa-solid fa-location-dot mr-2"></i> Road No.10 , Mirpur ,Dhaka</p>
+                  <p><i class="fa-solid fa-bed"></i> 2 Beds <i class="fa-solid fa-bath ml-2"></i> 1 Bath <i class="fa-solid fa-car ml-2"></i> 1 Parking</p>
+                  <div class="card-actions">
+                    <button class="font-bold text-xl hover:border-b-2 border-black">Explore More</button><i class="fa-solid fa-arrow-right -rotate-45 rounded-full bg-[#ABEF5F] text-black p-2"></i>
+                  </div>
+              </div>
+            </div>
+              <!-- card 3 -->
+              <div class="card bg-base-100 shadow-xl">
+                <figure>
+                  <img class="w-full"
+                    src="./assets/pic3.png"
+                    />
+                </figure>
+                <div class="card-body">
+                  <h2 class="card-title text-2xl">The Residences at Dhaka City </h2>
+                  <p><i class="fa-solid fa-location-dot mr-2"></i> Road No.10 , Mirpur ,Dhaka</p>
+                  <p><i class="fa-solid fa-bed"></i> 2 Beds <i class="fa-solid fa-bath ml-2"></i> 1 Bath <i class="fa-solid fa-car ml-2"></i> 1 Parking</p>
+                  <div class="card-actions">
+                    <button class="font-bold text-xl hover:border-b-2 border-black">Explore More</button><i class="fa-solid fa-arrow-right -rotate-45 rounded-full bg-[#ABEF5F] text-black p-2"></i>
+                  </div>
+              </div>
+            </div>
+              <!-- card 4 -->
+              <div class="card bg-base-100 shadow-xl">
+                <figure>
+                  <img class="w-full"
+                    src="./assets/pic4.png"
+                    />
+                </figure>
+                <div class="card-body">
+                  <h2 class="card-title text-2xl">The Residences at Dhaka City </h2>
+                  <p><i class="fa-solid fa-location-dot mr-2"></i> Road No.10 , Mirpur ,Dhaka</p>
+                  <p><i class="fa-solid fa-bed"></i> 2 Beds <i class="fa-solid fa-bath ml-2"></i> 1 Bath <i class="fa-solid fa-car ml-2"></i> 1 Parking</p>
+                  <div class="card-actions">
+                    <button class="font-bold text-xl hover:border-b-2 border-black">Explore More</button><i class="fa-solid fa-arrow-right -rotate-45 rounded-full bg-[#ABEF5F] text-black p-2"></i>
+                  </div>
+              </div>
+            </div>
+              <!-- card 5 -->
+              <div class="card bg-base-100 shadow-xl">
+                <figure>
+                  <img class="w-full"
+                    src="./assets/pic5.png"
+                    />
+                </figure>
+                <div class="card-body">
+                  <h2 class="card-title text-2xl">The Residences at Dhaka City </h2>
+                  <p><i class="fa-solid fa-location-dot mr-2"></i> Road No.10 , Mirpur ,Dhaka</p>
+                  <p><i class="fa-solid fa-bed"></i> 2 Beds <i class="fa-solid fa-bath ml-2"></i> 1 Bath <i class="fa-solid fa-car ml-2"></i> 1 Parking</p>
+                  <div class="card-actions">
+                    <button class="font-bold text-xl hover:border-b-2 border-black">Explore More</button><i class="fa-solid fa-arrow-right -rotate-45 rounded-full bg-[#ABEF5F] text-black p-2"></i>
+                  </div>
+              </div>
+            </div>
+              <!-- card 6 -->
+              <div class="card bg-base-100 shadow-xl">
+                <figure>
+                  <img class="w-full"
+                    src="./assets/pic6.png"
+                    />
+                </figure>
+                <div class="card-body">
+                  <h2 class="card-title text-2xl">The Residences at Dhaka City </h2>
+                  <p><i class="fa-solid fa-location-dot mr-2"></i> Road No.10 , Mirpur ,Dhaka</p>
+                  <p><i class="fa-solid fa-bed"></i> 2 Beds <i class="fa-solid fa-bath ml-2"></i> 1 Bath <i class="fa-solid fa-car ml-2"></i> 1 Parking</p>
+                  <div class="card-actions">
+                    <button class="font-bold text-xl hover:border-b-2 border-black">Explore More</button><i class="fa-solid fa-arrow-right -rotate-45 rounded-full bg-[#ABEF5F] text-black p-2"></i>
+                  </div>
+              </div>
+             </div>
+          </div>
+        </section>
         </main>
         <!-- Let’s Connect section -->
         <div
