--- a/index.html
+++ b/index.html
@@ -108,8 +108,7 @@
             <div class="space-y-8 pt-8 md:pt-0 text-center md:text-left">
               <button class=" bg-white rounded-full py-2 px-4 font-bold"><i class="fa-solid fa-arrow-right mr-2"></i>About Us</button>
               <h3 class="md:text-4xl text-2xl font-bold md:w-3/4">We design thoughtful, liveable spaces</h3>
-              <p>The barn house captivates with its blend of rustic charm and 
-                modern sophistication, featuring weathered wood, sleek metal accents.</p>
+              <p>Designing a house is not just about creating a space to live, but crafting a sanctuary that reflects your personality, nurtures your well-being, and adapts to your evolving needs</p>
                 <!-- card-1 -->
                  <div class="flex p-6 gap-3 rounded-xl drop-shadow-md bg-white">
                   <div>
@@ -117,7 +116,7 @@
                   </div>
                   <div class="flex-1">
                     <h3 class="text-xl font-bold">Commercial</h3>
-                    <p class="text-gray-500 md:w-3/4">The barn house captivates with its blend of rustic charm and modern.</p>
+                    <p class="text-gray-500 md:w-3/4">A commercial home blends the warmth of residential living with the functionality of a business space.</p>
                   </div>
                 </div>
                 <!-- card-2 -->
@@ -127,7 +126,7 @@
                 </div>
                   <div class="flex-1">
                     <h3 class="text-xl font-bold">Residential</h3>
-                    <p class="text-gray-500 md:w-3/4">The barn house captivates with its blend of rustic charm and modern.</p>
+                    <p class="text-gray-500 md:w-3/4">A residential house is more than just a structure; it's a personal retreat that provides comfort, security.</p>
                   </div>
                 </div>
             </div>
@@ -174,7 +173,7 @@
           <!-- section title -->
            <div class="text-center">
             <h3 class="font-bold text-4xl">Our Works Process</h3>
-            <p class="text-gray-700 font-medium md:w-3/5 mx-auto mt-6 mb-8">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+            <p class="text-gray-700 font-medium md:w-3/5 mx-auto mt-6 mb-8">work procedure is a meticulous journey from concept to reality, balancing creativity and precision to design spaces that are both functional and inspiring.</p>
            </div>
            <!-- card section -->
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 pb-20">
@@ -182,25 +181,25 @@
                <div class="p-6 rounded-2xl space-y-3 bg-[#E7C1D3]">
                 <img src="./assets/concept.png" alt="">
                 <h3 class="font-semibold text-xl">Concept</h3>
-                <p class="text-gray-600">The barn house captivates with its blend of rustic charm and modern.</p>
+                <p class="text-gray-600"> concept is the seed from which innovative and cohesive designs grow, setting the tone for the entire project.</p>
                </div>
               <!-- card 2 -->
                <div class="p-6 rounded-2xl space-y-3 bg-[#EFDA6E]">
                 <img src="./assets/flow-chart.png" alt="">
                 <h3 class="font-semibold text-xl">Design Process</h3>
-                <p class="text-gray-600">The barn house captivates with its blend of rustic charm and modern.</p>
+                <p class="text-gray-600">The design process is a creative journey, transforming ideas into tangible plans that guide the creation of spaces.</p>
                </div>
               <!-- card 3 -->
                <div class="p-6 rounded-2xl space-y-3 bg-[#A4DAC3]">
                 <img src="./assets/vision.png" alt="">
                 <h3 class="font-semibold text-xl">Supervision</h3>
-                <p class="text-gray-600">The barn house captivates with its blend of rustic charm and modern.</p>
+                <p class="text-gray-600">Supervision is the vigilant oversight that ensures every detail aligns with the design and meets quality standards</p>
                </div>
               <!-- card 4 -->
                <div class="p-6 rounded-2xl space-y-3 bg-[#77AAEA]">
                 <img src="./assets/budget-planning.png" alt="">
                 <h3 class="font-semibold text-xl">Budget Planning</h3>
-                <p class="text-gray-600">The barn house captivates with its blend of rustic charm and modern.</p>
+                <p class="text-gray-600">Budget planning is the blueprint for ensuring that vision meets reality within financial boundaries.</p>
                </div>
             </div>
          </section>
@@ -213,16 +212,16 @@
         <!-- section title -->
          <div class="text-center">
           <h3 class="font-bold text-2xl md:text-4xl">Our Latest Portfolio</h3>
-          <p class="text-gray-700 font-medium md:w-3/5 mx-auto mt-6 mb-8"> The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+          <p class="text-gray-700 font-medium md:w-3/5 mx-auto mt-6 mb-8"> the art of merging form and function, creating solutions that are as beautiful as they are purposeful.</p>
          </div>
          <!-- grid grid grid -->
-          <div class="grid grid-cols-1 lg:grid-cols-12 md:grid-cols-2 gap-6">
+          <div class="grid grid-cols-1 lg:grid-cols-8 md:grid-cols-2 gap-6">
             <!-- card-1 -->
-             <div class="flex flex-col md:flex-row md:col-span-2 gap-6 lg:col-span-9 p-6 border rounded-2xl drop-shadow-md">
+             <div class="flex flex-col md:flex-row md:col-span-2 gap-6 lg:col-span-5 p-6 border rounded-2xl drop-shadow-md">
               <img src="./assets/img1.png" alt="">
               <div class="">
                 <h3 class="font-bold text-2xl">Commercial</h3>
-                <p class="text-gray-500 my-6 md:w-3/5">The barn house captivates with its blend of rustic charm and modern. The barn house captivates with its blend of rustic charm and modern .</p>
+                <p class="text-gray-500 my-6 md:w-3/5">A commercial home blends the warmth of residential living with the functionality of a business space, creating an environment where comfort meets productivity</p>
                 <a class="font-bold text-xl">View Details<i class="fa-solid fa-arrow-right -rotate-45 rounded-full bg-[#ABEF5F] text-black p-2 ml-2"></i></a>
               </div>
             </div>
@@ -235,11 +234,11 @@
                 <img class="w-full h-full" src="./assets/img3.png" alt="">
                </div> 
                 <!-- card-4 -->
-             <div class="flex flex-col md:flex-row gap-6 lg:col-span-8 p-6 border rounded-2xl drop-shadow-md md:col-span-2">
+             <div class="flex flex-col md:flex-row gap-6 lg:col-span-4 p-6 border rounded-2xl drop-shadow-md md:col-span-2">
               <img src="./assets/img4.png" alt="">
               <div class="">
-                <h3 class="font-bold text-2xl">Commercial</h3>
-                <p class="text-gray-500 my-6 md:w-3/4">The barn house captivates with its blend of rustic charm and modern. The barn house captivates with its blend of rustic charm and modern .</p>
+                <h3 class="font-bold text-2xl">Residential</h3>
+                <p class="text-gray-500 my-6 md:w-3/4">A residential house is more than just a structure; it's a personal retreat that provides comfort, security, and a sense of belonging.</p>
                 <a class="font-bold text-xl">View Details<i class="fa-solid fa-arrow-right -rotate-45 rounded-full bg-[#ABEF5F] text-black p-2 ml-2"></i></a>
               </div>
             </div> 
@@ -263,14 +262,14 @@
         <!-- section title -->
          <div class="text-center">
           <h3 class="font-bold text-2xl md:text-4xl">Read Our Articles and News</h3>
-          <p class="text-gray-700 font-medium md:w-3/5 mx-auto mt-6 mb-8">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+          <p class="text-gray-700 font-medium md:w-3/5 mx-auto mt-6 mb-8">The pulse of our world, delivering timely insights that keep us informed and connected to the events shaping our lives.</p>
          </div> 
          <!-- card section -->
           <div class="grid grid-cols-1 md:grid-cols-3 gap-5">
             <!-- card 1 -->
-            <div class="card bg-base-100 shadow-xl lg:pt-6">
-              <figure>
-                <img
+            <div class="card bg-base-100 shadow-xl">
+              <figure class="obj">
+                <img class="w-full"
                   src="./assets/article1.png"
                   alt="" />
               </figure>
@@ -293,9 +292,9 @@
               </div>
             </div>
             <!-- card 2 -->
-            <div class="card bg-base-100 shadow-xl lg:pt-6">
+            <div class="card bg-base-100 shadow-xl">
               <figure>
-                <img
+                <img class="w-full"
                   src="./assets/article2.png"
                   alt="" />
               </figure>
@@ -318,9 +317,9 @@
               </div>
             </div>
             <!-- card 3 -->
-            <div class="card bg-base-100 shadow-xl lg:pt-6">
+            <div class="card bg-base-100 shadow-xl">
               <figure>
-                <img
+                <img class="w-full"
                   src="./assets/article3.png"
                   alt="" />
               </figure>
@@ -353,7 +352,7 @@
             <!-- section title -->
             <div class="text-center">
                 <h3 class="font-bold text-2xl md:text-4xl">Featured Property</h3>
-              <p class="text-gray-700 font-medium md:w-3/5 mx-auto mt-6 mb-8">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+              <p class="text-gray-700 font-medium md:w-3/5 mx-auto mt-6 mb-8">We offers a harmonious blend of private and shared spaces, providing flexibility and community within a single, stylish dwelling.</p>
             </div>
             <!-- card section -->
              <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
@@ -381,8 +380,8 @@
                     />
                 </figure>
                 <div class="card-body">
-                  <h2 class="card-title text-2xl">The Residences at Dhaka City </h2>
-                  <p><i class="fa-solid fa-location-dot mr-2"></i> Road No.10 , Mirpur ,Dhaka</p>
+                  <h2 class="card-title text-2xl">The Residences at Chittagong City </h2>
+                  <p><i class="fa-solid fa-location-dot mr-2"></i> Road No.10 , Agrabad ,Chittagong</p>
                   <p><i class="fa-solid fa-bed"></i> 2 Beds <i class="fa-solid fa-bath ml-2"></i> 1 Bath <i class="fa-solid fa-car ml-2"></i> 1 Parking</p>
                   <div class="card-actions">
                     <button class="font-bold text-xl hover:border-b-2 border-black">Explore More</button><i class="fa-solid fa-arrow-right -rotate-45 rounded-full bg-[#ABEF5F] text-black p-2"></i>
@@ -397,8 +396,8 @@
                     />
                 </figure>
                 <div class="card-body">
-                  <h2 class="card-title text-2xl">The Residences at Dhaka City </h2>
-                  <p><i class="fa-solid fa-location-dot mr-2"></i> Road No.10 , Mirpur ,Dhaka</p>
+                  <h2 class="card-title text-2xl">The Residences at Rajshahi City </h2>
+                  <p><i class="fa-solid fa-location-dot mr-2"></i> Road No.10 ,Rajshahi</p>
                   <p><i class="fa-solid fa-bed"></i> 2 Beds <i class="fa-solid fa-bath ml-2"></i> 1 Bath <i class="fa-solid fa-car ml-2"></i> 1 Parking</p>
                   <div class="card-actions">
                     <button class="font-bold text-xl hover:border-b-2 border-black">Explore More</button><i class="fa-solid fa-arrow-right -rotate-45 rounded-full bg-[#ABEF5F] text-black p-2"></i>
@@ -413,8 +412,8 @@
                     />
                 </figure>
                 <div class="card-body">
-                  <h2 class="card-title text-2xl">The Residences at Dhaka City </h2>
-                  <p><i class="fa-solid fa-location-dot mr-2"></i> Road No.10 , Mirpur ,Dhaka</p>
+                  <h2 class="card-title text-2xl">The Residences at Cumilla City </h2>
+                  <p><i class="fa-solid fa-location-dot mr-2"></i> Road No.10 ,Kandirpar , Cumilla</p>
                   <p><i class="fa-solid fa-bed"></i> 2 Beds <i class="fa-solid fa-bath ml-2"></i> 1 Bath <i class="fa-solid fa-car ml-2"></i> 1 Parking</p>
                   <div class="card-actions">
                     <button class="font-bold text-xl hover:border-b-2 border-black">Explore More</button><i class="fa-solid fa-arrow-right -rotate-45 rounded-full bg-[#ABEF5F] text-black p-2"></i>
@@ -429,8 +428,8 @@
                     />
                 </figure>
                 <div class="card-body">
-                  <h2 class="card-title text-2xl">The Residences at Dhaka City </h2>
-                  <p><i class="fa-solid fa-location-dot mr-2"></i> Road No.10 , Mirpur ,Dhaka</p>
+                  <h2 class="card-title text-2xl">The Residences at Rupayan City </h2>
+                  <p><i class="fa-solid fa-location-dot mr-2"></i> Road No.10 , Block-D ,Dhaka</p>
                   <p><i class="fa-solid fa-bed"></i> 2 Beds <i class="fa-solid fa-bath ml-2"></i> 1 Bath <i class="fa-solid fa-car ml-2"></i> 1 Parking</p>
                   <div class="card-actions">
                     <button class="font-bold text-xl hover:border-b-2 border-black">Explore More</button><i class="fa-solid fa-arrow-right -rotate-45 rounded-full bg-[#ABEF5F] text-black p-2"></i>
@@ -446,7 +445,7 @@
                 </figure>
                 <div class="card-body">
                   <h2 class="card-title text-2xl">The Residences at Dhaka City </h2>
-                  <p><i class="fa-solid fa-location-dot mr-2"></i> Road No.10 , Mirpur ,Dhaka</p>
+                  <p><i class="fa-solid fa-location-dot mr-2"></i> Road No.10 , Banani ,Dhaka</p>
                   <p><i class="fa-solid fa-bed"></i> 2 Beds <i class="fa-solid fa-bath ml-2"></i> 1 Bath <i class="fa-solid fa-car ml-2"></i> 1 Parking</p>
                   <div class="card-actions">
                     <button class="font-bold text-xl hover:border-b-2 border-black">Explore More</button><i class="fa-solid fa-arrow-right -rotate-45 rounded-full bg-[#ABEF5F] text-black p-2"></i>
@@ -467,7 +466,7 @@
           <!-- section title -->
            <div class="text-center">
             <h3 class="font-bold text-2xl md:text-4xl">Let’s Discuss Next Project</h3>
-            <p class="text-gray-700 font-medium md:w-3/5 mx-auto mt-6 mb-8">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+            <p class="text-gray-700 font-medium md:w-3/5 mx-auto mt-6 mb-8">Our next project is set to push the boundaries of innovation, combining visionary design with practical solutions to create something truly exceptional.</p>
            </div> 
            <!-- form section -->
             <form class="grid grid-cols-1 md:grid-cols-2 md:grid-rows-5 gap-8">
