--- a/index.html
+++ b/index.html
@@ -219,9 +219,9 @@
             <!-- card-1 -->
              <div class="flex flex-col md:flex-row md:col-span-2 gap-6 lg:col-span-5 p-6 border rounded-2xl drop-shadow-md">
               <img src="./assets/img1.png" alt="">
-              <div class="">
+              <div>
                 <h3 class="font-bold text-2xl">Commercial</h3>
-                <p class="text-gray-500 my-6 md:w-3/5">A commercial home blends the warmth of residential living with the functionality of a business space, creating an environment where comfort meets productivity</p>
+                <p class="text-gray-500 my-6 md:w-4/5">A commercial home blends the warmth of residential living with the functionality of a business space, creating an environment where comfort meets productivity</p>
                 <a class="font-bold text-xl">View Details<i class="fa-solid fa-arrow-right -rotate-45 rounded-full bg-[#ABEF5F] text-black p-2 ml-2"></i></a>
               </div>
             </div>
